# g3w-admin-authjwt

./: .gitignore  MANIFEST.in  Makefile  README.md  __init__.py  apps.py  pyproject.toml  requirements.txt  urls.py  views.py
authjwt/: __init__.py  apiurls.py  apps.py
migrations/: 0001_initial.py
